Version 1.3.0
    * not released yet
    * added animated tab previews
    * ssl manager now can import own certificate
    * clear recent history now remembers last checked options
    * new urlbar completion widget can now show also entries from bookmarks
    * little changes in speed dial's preferences
    * support for 3rd party subscriptions in AdBlock
    * improved performance of AdBlock rules matching
    * possibility to add subscriptions with loading abp: links
    * improved AdBlock dialog distinguish rule types with colors
    * popup windows now have loading animation in urlbar
    * new gif for loading animation (spinner)
    * possibility to add RSS feed into external reader
    * option to specify preferred behaviour when opening new tab
    * inverting preferred new tab behaviour with shift modifier (eg. shift+middle click on link)
    * X11: middle clicking on add tab button will open new tab with global mouse selection's contents
    * fixed excessive ssl warnings when rejecting untrusted certificate
    * fixed dragging the whole text from some labels
    * fixed handling special characters when searching with shortcuts in urlbar
    * fixed "open external protocol" dialog overflowing out of desktop if url is too long
    * fixed "hide when there is only one tab" option in preferences
    * fixed "close other tabs" action in tabbar context menu
    * fixed rss popup in urlbar overflowing out of desktop if feed's title is too long
    * fixed animations occasionally stop working without any reason

Version 1.2.0
    * released 5 April 2012
    * Brazilian Portuguese, Indonesian, Georgian, Japanese and Romanian translation
    * added information about configuration page qupzilla:config
    * added option to show only icons in bookmarks toolbar
    * added alt+d shortcut for focusing urlbar
    * added possibility to import bookmarks folder structure on html import
    * added option to create search engine from input element on page